WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74319
fixes for transparent bitmaps
https://bugs.webkit.org/show_bug.cgi?id=74319
Summary
fixes for transparent bitmaps
Robin Dunn
Reported
2011-12-12 12:27:43 PST
Created
attachment 118825
[details]
fixes for transparent bitmaps Don't make the bitmap transparent when using theme drawing calls that don't support transparent bitmaps.
Attachments
fixes for transparent bitmaps
(2.76 KB, patch)
2011-12-12 12:27 PST
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2011-12-21 15:02:27 PST
Ping? Robin isn't a committer. Can this not land?
Kevin Ollivier
Comment 2
2011-12-21 15:06:37 PST
Oops, sorry about that! I just forgot to close the bug. It was landed in
r102718
. Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug