[wx] Don't make the bitmap transparent when using theme drawing calls that don't support transparent bitmaps. https://bugs.webkit.org/show_bug.cgi?id=74319

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/91106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102718 268f45cc-cd09-0410-ab3c-d52691b4dbfc